resources/assets/stylesheets/scss/system-notifications.scss
@use 'variables';

#system-notifications {
    &.bottom-right {
        bottom: 40px;
        right: 15px;

        .system-notification {
            &.system-notification-slide-enter-from,
            &.system-notification-slide-leave-to {
                opacity: 0;
                transform: translateX(100%);
            }

            &.system-notification-slide-leave-from,
            &.system-notification-slide-enter-to {
                opacity: 1;
                transform: translateX(0);
            }

            &.system-notification-slide-enter-active,
            &.system-notification-slide-leave-active {
                transition: all var(--transition-duration-superslow) ease-in-out;
            }
        }

        &:not(.system-notifications-login) {
            position: fixed;
            width: 400px;
        }

    }

    &.top-center {
        left: calc(50% - 300px);
        top: 40px;

        .system-notification {
            &.system-notification-slide-enter-from,
            &.system-notification-slide-leave-to {
                opacity: 0;
                transform: translateY(-100%);
            }

            &.system-notification-slide-leave-from,
            &.system-notification-slide-enter-to {
                opacity: 1;
                transform: translateY(0);
            }

            &.system-notification-slide-enter-active,
            &.system-notification-slide-leave-active {
                transition: all var(--transition-duration-slow) ease-in-out;
            }

        }

        &:not(.system-notifications-login) {
            position: fixed;
            width: 600px;
        }

    }

    &.system-notifications-login {
        min-height: 100px;
        width: 404px;
        margin: auto;
    }

    overflow: visible;
    z-index: 1000;
}

.system-notification {
    background-color: var(--content-color-20);
    color: var(--color--white);
    cursor: pointer;
    display: flex;
    margin-bottom: 6px;
    min-height: 60px;
    padding: 5px;
    position: relative;

    .system-notification-icon {
        flex: 0;
        padding: 10px;
    }

    .system-notification-content {
        flex: 1;
        height: auto;
        margin: auto 25px auto 10px;
        max-width: calc(100% - 75px);
        overflow: hidden;
        text-overflow: ellipsis;
        word-wrap: break-word;

        .system-notification-details {
            .system-notification-details-content {
                padding-left: 10px;
            }
        }
    }

    .system-notification-close {
        align-self: normal;
        display: none;
        flex: 0;
        height: 20px;
        width: 20px;

        img, svg {
            cursor: pointer;
            position: absolute;
            right: 10px;
            top: 10px;
        }
    }

    .system-notification-timeout {
        &.system-notification-timeout-enter-active,
        &.system-notification-timeout-leave-active {
            transition: width 5s linear;
        }

        &.system-notification-timeout-enter-from {
            width: 100%;
        }

        &.system-notification-timeout-leave-from {
            width: 0;
        }

        background-color: var(--base-color-40);
        bottom: 0;
        height: 5px;
        left: 0;
        position: absolute;
        width: 0;
    }

    &.system-notification-disrupted .system-notification-timeout {
        display: none;
    }

    a:not(.system-notification-message) {
        color: var(--color--white);
        text-decoration-line: underline;

        &.link-intern {
            &::before {
                background: unset;
                content: "";
                height: 0;
                width: 0;
            }
        }
    }

    a.system-notification-message {
        color: var(--color--white);
        text-decoration: unset;
    }

    &:hover {
        .system-notification-close {
            display: unset;
        }
    }

}

.system-notification-exception {
    background-color: var(--color--warning);
    color: var(--color--white);

    .system-notification-timeout {
        background-color: var(--color--warning-alternative);
    }
}

.system-notification-error {
    background-color: var(--color--warning);
    color: var(--color--white);

    .system-notification-timeout {
        background-color: var(--color--warning-alternative);
    }
}

.system-notification-warning {
    background-color: var(--color--attention);
    color: var(--color--black);

    .system-notification-timeout {
        background-color: var(--color--attention-alternative);
    }

    a:not(.system-notification-message) {
        color: var(--color--black);
        text-decoration-line: underline;
    }

    a.system-notification-message {
        color: var(--color--black);
        text-decoration: unset;
    }

}

.system-notification-success {
    background-color: var(--color--good);

    .system-notification-timeout {
        background-color: var(--color--good-alternative);
    }
}

.system-notification-info {
    background-color: var(--color--info);

    .system-notification-timeout {
        background-color: var(--color--info-alternative);
    }
}

